--- a/styles.css
+++ b/styles.css
@@ -167,10 +167,12 @@ button:hover {
 
 /* Styling for the reset button */
 .reset-button {
-    width: 100%;
+    position: sticky;
+    bottom: 0;
+    width: 90%;
     padding: 10px;
-    margin-top: 20px;
-    background-color: #4caf50;
+    margin: 10px auto;
+    background-color: #388E3C;
     color: #ffffff;
     border: none;
     border-radius: 4px;
@@ -180,7 +182,7 @@ button:hover {
 }
 
 .reset-button:hover {
-    background-color: #45a049;
+    background-color: #388E3C;
 }
 
 /* Darken the Technique Name column to indicate it is not clickable */
