--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ body {
 
 button {
     padding: 5px 10px;
-    background-color: #1D491F; /* Darker green for better contrast */
+    background-color: #2b5e2d; /* Darker green for better contrast */
     color: #ffffff; /* White text */
     border: none;
     border-radius: 4px;
@@ -207,7 +207,7 @@ button:hover {
     width: 90%;
     padding: 10px;
     margin: 10px auto;
-    background-color: #1D491F;
+    background-color: #2b5e2d;
     color: #ffffff;
     border: none;
     border-radius: 4px;
@@ -217,7 +217,7 @@ button:hover {
 }
 
 .reset-button:hover {
-    background-color: #1D491F;
+    background-color: rgb(39, 100, 43);
 }
 
 /* Darken the Technique Name column to indicate it is not clickable */
